fix URL deprecation warnings