@@ -1,8 +1,8 @@
 package net.ornithemc.keratin.maven;
 
 import java.io.BufferedReader;
-import java.io.IOException;
 import java.io.InputStreamReader;
+import java.net.URI;
 import java.net.URL;
 import java.util.Comparator;
 import java.util.HashMap;
@@ -108,7 +108,7 @@ public class MetaSourcedMultipleBuildsMavenArtifacts implements MetaSourcedMaven
 		String metaEndpointUrl = metaUrl + metaEndpoint.formatted(keratin.getIntermediaryGen().get());
 
 		try {
-			try (InputStreamReader ir = new InputStreamReader(new URL(metaEndpointUrl).openStream())) {
+			try (InputStreamReader ir = new InputStreamReader(new URI(metaEndpointUrl).toURL().openStream())) {
 				JsonArray jsonArray = KeratinGradleExtension.GSON.fromJson(ir, JsonArray.class);
 
 				for (JsonElement jsonEntry : jsonArray) {
@@ -122,7 +122,7 @@ public class MetaSourcedMultipleBuildsMavenArtifacts implements MetaSourcedMaven
 					}
 				}
 			}
-		} catch (IOException e) {
+		} catch (Exception e) {
 			keratin.getProject().getLogger().warn("unable to parse maven artifact versions from " + metaEndpointUrl + "!", e);
 		}
 	}
@@ -139,12 +139,12 @@ public class MetaSourcedMultipleBuildsMavenArtifacts implements MetaSourcedMaven
 
 				try {
 					String sha1Path = artifact.url() + ".sha1";
-					URL sha1Url = new URL(sha1Path);
+					URL sha1Url = new URI(sha1Path).toURL();
 
 					try (BufferedReader br = new BufferedReader(new InputStreamReader(sha1Url.openStream()))) {
 						artifact = artifact.withSha1(br.readLine());
 					}
-				} catch (IOException e) {
+				} catch (Exception e) {
 					keratin.getProject().getLogger().warn("unable to find maven artifact sha1 hash for " + artifact.artifactId() + " version " + artifact.version() + "!", e);
 				}
 			}
